src/test/deca/context/valid/oracle/print_different_types.deca
{
    int i = 0;
    float f = 1.0;
    print(1);
    print(i);
    print(1.0);
    print(f);
    print("Hello Moon !");
}