src/test/deca/context/invalid/oracle/wrong_cast12.deca
{
    float f = 0.0;
    int i = f;
}